[package]
name = "http2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
tokio-rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fluke-hpack = "0.3.0"
raptor_core = { path = "../raptor-core" }

[dev-dependencies]
rstest = "0.18.2"
