[package]
name = "raptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.5.4", features = ["derive"] }
httparse = "1.8.0"
http2 = { path = "../http2" }
mime_guess = "2.0.4"
rustls-pemfile = "2"
serde = {version = "1.0.185", features = ["derive"]}
serde_yaml = "0.9.25"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
